# NeoWorkflow

./: CMakeLists.txt  README.md
cmake/: configure.cmake
src/: Labworks.cpp  Labworks.h  MyFrame.fbp  cMain.cpp  cMain.h
src/libraries/lib_i_datastructure/: data_structure.cpp  data_structure.h
src/libraries/lib_i_table/: table.cpp  table.h
src/libraries/lib_list/: list.h
src/libraries/lib_polynomial/: polynomial.cpp  polynomial.h
src/libraries/lib_stack/: stack.h
src/libraries/lib_table_hash_list/: hash_list.cpp  hash_list.h
src/libraries/lib_table_hash_vector/: hash_vector.cpp  hash_vector.h
src/libraries/lib_table_linear_array/: linear_array.cpp  linear_array.h
src/libraries/lib_table_linear_list/: linear_list.cpp  linear_list.h
src/libraries/lib_table_ordered_array/: ordered_array.cpp  ordered_array.h
src/libraries/lib_table_tree/: tree.cpp  tree.h
